--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Higher Order Functions</title>
   </head>
   <body>
-    <script type="module" src="scripts.js"></script>
+    <script type="module" src="./scripts.js"></script>
   </body>
 </html>
